objects/vlocity_cmt__Dunning__c.object
<CustomObject>
    <description>Represents collection acitvities of the customer or vendors to make payment on outstanding invoices. It typically consists of late payment or past due payment reminders or service disconnect notices. Master-detail child object of an Account.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <description>Account ID associated with the collections activity</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Activities</relationshipLabel>
        <relationshipName>CollectionsActivities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CollectionsActivity__c</fullName>
        <description>Most recent collections activity</description>
        <label>Collections Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late Payment Assessed</fullName>
                </value>
                <value>
                    <fullName>Past Due Notice</fullName>
                </value>
                <value>
                    <fullName>Disconnect Notice</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Payment Plan Deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CollectionsAmount__c</fullName>
        <description>Past due amount included in the collections activity.</description>
        <label>Collections Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CollectionsEndDate__c</fullName>
        <description>The date on which the Collections Activity ended.</description>
        <label>Collections Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CollectionsStartDate__c</fullName>
        <description>Date the collections activity started.</description>
        <label>Collections Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NextCollectionsActivity__c</fullName>
        <description>Next planned collections activity.</description>
        <label>Next Collections Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Late payment assessed</fullName>
                </value>
                <value>
                    <fullName>Past due notice</fullName>
                </value>
                <value>
                    <fullName>Disconnect notice</fullName>
                </value>
                <value>
                    <fullName>Payment plan deactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collections Activity</label>
    <nameField>
        <label>Collections Activity Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>